Fix massive top spacing in IE7.
IE7 had a massive space at the top of the page due to the way we have a
top border and a -ive margin on a child element. This removes the top
border.

--- a/app/assets/stylesheets/frontend/reset/_reset.scss
+++ b/app/assets/stylesheets/frontend/reset/_reset.scss
@@ -13,6 +13,14 @@
   -webkit-font-smoothing: antialiased;
   border-bottom: $gutter-one-third solid $inside-gov-secondary;
 
+  @include ie(7){
+    border-top: 1px solid #fff !important;
+    // I don't like this, I am not proud of this, but this is how it has to be.
+    // IE7 can't manage -ve margins over borders. It also won't let me redefine
+    // the border without the important, I probably could manage it using a
+    // better selector but that wouldn't be inline in this IE block.
+  }
+
   @include media(desktop) {
     padding-bottom: $gutter*2;
   }
